--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -1,18 +1,12 @@
-global:
-  owner: tonynv@amazon.com
-  qsname: qs-workshop
+project:
+  name: qs-eks
   regions:
-    - ap-southeast-1
-    - ap-southeast-2
-    - eu-central-1
-    - eu-west-1
-    - us-east-1
-    - us-west-1
-    - us-west-2
-  reporting: true
+  - ap-southeast-1
+  - us-east-1
+  - us-west-2
+  - eu-central-1
 tests:
-  lab-master-vpc:
-    parameter_input: workshop_input.json 
-    template_file: master.template.yaml
+  default:
+    template: ./templates/master.template.yaml
     regions:
-      - us-west-2
+    - us-west-1
